--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<!-- Menu para testes -->
 
 <body>
     <nav class="navbar navbar-expand-lg">
@@ -31,20 +32,39 @@
                         aria-label="Close"></button>
                 </div>
 
-                <div class="offcanvas-body">
+                <di class="offcanvas-body">
 
                     <ul class="navbar-nav flex-grow-1 ms-4">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Categoria</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Categorias
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="casa.html">Casa</a></li>
+                                <li><a class="dropdown-item" href="corpo.html">Corpo</a></li>
+                                <li><a class="dropdown-item" href="moda.html">Moda</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="ferramenta.html">Ferramentas</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                            </ul>
                         </li>
+
                         <li class="nav-item">
                             <a href="#" class="nav-link">Promoções</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Sobre</a>
                         </li>
-
                     </ul>
+
                     <!-- Alinha à direita de forma flutuante "align-self-end" -->
                     <div class="align-self-end">
                         <ul class="navbar-nav ms-4">
@@ -64,11 +84,35 @@
                             </li>
                         </ul>
                     </div>
-                </div>
             </div>
+        </div>
         </div>
     </nav>
     <style>
+        .navbar .nav-link {
+            font-size: 17px;
+            margin-left: 10px;
+            position: relative;
+        }
+
+        .navbar .nav-link::before {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            right: 0;
+            margin-inline: auto;
+            width: 0%;
+            height: 2px;
+            background-color: #ffffff;
+            transition: all 0.6s ease;
+            transform-origin: center;
+        }
+
+        .navbar .nav-item:hover .nav-link::before {
+            width: 100%;
+        }
+
         .navbar {
             background-color: #7a260f;
         }
@@ -79,6 +123,34 @@
 
         .offcanvas .nav-item .nav-link:hover {
             color: rgb(0, 0, 0);
+        }
+
+        .dropdown-menu {
+            background-color: #7a260f;
+            border: none;
+        }
+
+        .dropdown-menu li a {
+            color: #ffffff;
+        }
+
+        .dropdown-menu li a:hover {
+            color: #000000;
+            background-color: #ffffff;
+        }
+
+        .dropdown-menu li a:before {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            right: 0;
+            margin-inline: auto;
+            width: 0%;
+            height: 2px;
+            background-color: #ffffff;
+            transition: all 0.6s ease;
+            transform-origin: center;
         }
 
         #logo {
@@ -104,117 +176,86 @@
 
         }
     </style>
-    <div class="container row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="cards">
-        <div class="" id="categoria" style="width: 9rem;">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-        </div>
-        <div class="" id="categoria" style="width: 9rem;">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-        </div>
-        <div class="" id="categoria" style="width: 9rem;">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-        </div>
-        <div class="" id="categoria" style="width: 9rem;">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-        </div>
-        <div class="" id="categoria" style="width: 9rem;">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-        </div>
-        <div class="" id="categoria" style="width: 9rem;">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="t-produtos row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-4 g-2">
+
+            <div class="col categorias">
+                <img class="produto-image card-img-top img-fluid" src="imagens/categorias/categoria-decoração.png">
+                <h6 class="card-title text-center">Decoração</h6>
+            </div>
+
+            <div class="col categorias">
+                <img class="produto-image card-img-top img-fluid" src="imagens/categorias/categoria-cama.png">
+                <h6 class="card-title text-center">Colchões</h6>
+            </div>
+
+            <div class="col categorias">
+                <img class="produto-image card-img-top img-fluid" src="imagens/categorias/categoria-banho-cama.png">
+                <h6 class="card-title text-center text-decoration-none">Cama/Banho</h6>
+            </div>
+
+            <div class="col categorias">
+                <img class="produto-image card-img-top img-fluid" src="imagens/categorias/categoria-eletrodomesticos.png">
+                <h6 class="card-title text-center">Eletrodomésticos</h6>
+            </div>
+
+            <div class="col categorias">
+                <img class="produto-image card-img-top img-fluid" src="imagens/categorias/categoria-cozinha.png">
+                <h6 class="card-title text-center">Cozinha</h6>
+            </div>
+
+            <div class="col categorias">
+                <img class="produto-image card-img-top img-fluid" src="imagens/categorias/categoria-moveis.png">
+                <h6 class="card-title text-center">Moveis</h6>
+            </div>
         </div>
     </div>
     <style>
-        #cards{
-            margin-left: 8%;
-        
+        .categorias{
+            max-width: 100px;
+            margin: auto;
+            display: block;
         }
-        #categoria {
-            margin-left: 30px;
-            padding: 1.1em 1.2em 0.2em;
-            text-align: center;
-            box-shadow: 0 2 0px rgba(0, 0, 0, .2);
-        }
-
-        #categoria img {
-
-            width: 65%;
-            border-radius: 50%;
-            margin: 0 auto;
-            box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-        }
-
-        #categoria .btn {
-            border-radius: 2em;
-            color: #ffffff;
+        .categorias img{
+            border-radius: 500px;   
         }
     </style>
 
-    <footer class="bg-light text-lg-start">
-        <div class="container p-4">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <h5>Sobre Nós</h5>
-                    <p>Como comprar
-                        Cuidados com sua peça
-                        Perguntas frequentes
-                        Trocas e Devoluções
-                        Política de Privacidade
-                        Trabalhe Conosco
-                        Contato</p>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <h5 class="ms-lg-5">Contato</h5>
-                    <p class="ms-lg-5">Endereço: Rua da Viagem, 123<br>Telefone: (38) 456-7890<br>Email:
-                        arteindigena@gmail.com</p>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <h5>Meios de pagamentos</h5>
-                    <div class="row" id="icon-pagamento">
-                        <img src="imagens/icon-Pagamentos/visa.png">
-                        <img src="imagens/icon-Pagamentos/mastercard.png">
-                        <img src="imagens/icon-Pagamentos/diners.png">
-                        <img src="imagens/icon-Pagamentos/diners.png">
-                        <img src="imagens/icon-Pagamentos/elo.png">
-                        <img src="imagens/icon-Pagamentos/boleto.png">
-                        <img src="imagens/icon-Pagamentos/discover.png">
-                        <img src="imagens/icon-Pagamentos/amex.png">
 
-                    </div>
-                    <hr>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <h5 class="">Formas de envio</h5>
-                    <div class="row" id="icon-envio">
-                        <img src="imagens/icon-Pagamentos/correios.png">
-                        <img src="imagens/icon-Pagamentos/sedex.png">
-                        <img src="imagens/icon-Pagamentos/pac.png">
-                    </div>
-                    <hr>
-                </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="t-produtos row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-4 g-2">
+
+            <div class="col categoria">
+                <img class="produto-image card-img-top img-fluid" src="imagens/produtos/kit-colar.jpg">
+            </div>
+
+            <div class="col categoria">
+                <img class="produto-image card-img-top img-fluid" src="imagens/produtos/kit-colar.jpg">
+            </div>
+
+            <div class="col categoria">
+                <img class="produto-image card-img-top img-fluid" src="imagens/produtos/kit-colar.jpg">
+            </div>
+
+            <div class="col categoria">
+                <img class="produto-image card-img-top img-fluid" src="imagens/produtos/kit-colar.jpg">
             </div>
         </div>
-
-        <style>
-            #icon-pagamento img {
-                width: 18%;
-                margin-top: 7px;
-            }
-
-            .icon-redes-sociais svg {
-                margin-left: 3.4%;
-
-            }
-
-            #icon-envio img {
-                width: 25%;
-            }
-        </style>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    </div>
+    <style>
+        .categorias{
+            max-width: 100px;
+            margin: auto;
+            display: block;
+        }
+    </style>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 
 </body>
 
